# langchain-rust-sample

./: .gitignore  Cargo.toml  README.md
.kiro/steering/: product.md  structure.md  tech.md
specs/docs/: 001-generation-options.md  002-ollama-client.md  003-embedder.md  004-qdrant-vectorstore.md  005-text-splitter.md
src/: embedding.rs  main.rs  ollama.rs  rag.rs
