[package]
name = "langchain-rust-sample"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
langchain-rust = { version = "4.6.0", features = ["ollama", "pdf-extract", "qdrant"] }
serde = "1.0.228"
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
